<resources>
    <string name="app_name">Web Inspector</string>
    <string name="app_name_full">Web Inspector</string>
    <string name="hint_search">Enter url or request</string>
    <string name="hint_write_js">Write javascript source</string>
    <string name="hint_write_html">Write html</string>
    <string name="hint_find_to_page">Enter text</string>
    <string name="hint_cookie_name">Name</string>
    <string name="hint_cookie_value">Value</string>
    <string name="hint_no_content">No data.</string>
    <string name="hint_other_search_engine_home">Home page (https://domain.com/search)</string>
    <string name="hint_other_search_engine_search">Search page (https://domain.com/search?s=%20)</string>
    <string name="hint_enter_domain_whois">Enter domain or IP (domain.com / 127.0.0.1)</string>
    <string name="hint_enter_useragent">Enter a other UserAgent</string>
    <string name="hint_enter_name_file">Enter name file (filename.txt)</string>
    <string name="hint_error_search_engine_other_empty">This field cannot be empty!</string>
    <string name="hint_error_search_engine_other_search_20">This field must contain the value \"%20\"!</string>
    <string name="hint_error_search_engine_other_url_invalid">This field contains a strange link!</string>
    <string name="loading_page">Loading</string>
    <string name="belarus">Mikhno Dev. 2020-2022</string>
    <string name="action_console">Console</string>
    <string name="action_console_eruda">Console Eruda</string>
    <string name="action_console_firebug">Console FireBug</string>
    <string name="action_element_editor">Element editor(beta)</string>
    <string name="action_style_editor">Style editor(beta)</string>
    <string name="action_contenteditable">Content editable</string>
    <string name="action_highlight_border">Highlight border</string>
    <string name="action_source_page">Source page</string>
    <string name="action_desktop_version">Desktop version</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_feedback_and_help">Help &amp; Feedback</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_what_app">What it application</string>
    <string name="action_debug_mode">Debug mode</string>
    <string name="action_additions">Additions</string>
    <string name="action_clear_back_history">Clear history</string>
    <string name="action_for_developer">For developers</string>
    <string name="action_find_to_page">Find to page</string>
    <string name="action_history">History</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="action_ons">On</string>
    <string name="action_offs">Off</string>
    <string name="action_certificate">Certificate</string>
    <string name="action_whois_domain">Whois</string>
    <string name="action_save">Save</string>
    <string name="action_download">Download</string>
    <string name="action_inner">Inner</string>
    <string name="action_parent">Parent</string>
    <string name="action_ok">Ok</string>
    <string name="action_continue">Continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_clear">Clear</string>
    <string name="action_restart">Restart</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_remove_all_tabs">Remove all tabs</string>
    <string name="action_what_is_it">What is it?</string>
    <string name="action_copy">Copy</string>
    <string name="action_request_post">Request POST</string>
    <string name="action_request_get">Request GET</string>
    <string name="action_requests">Request\'s</string>
    <string name="action_create_addon">Create add-on</string>
    <string name="action_option_search_new">New</string>
    <string name="action_option_search_old">Old</string>
    <string name="action_viewsource">View Source</string>
    <string name="action_block_history">Block history</string>
    <string name="action_unblock_history">Unblock history</string>
    <string name="action_send_app_debug">Send debug</string>
    <string name="action_javascript">JavaScript</string>
    <string name="action_create_javascript">Create</string>
    <string name="action_store_javascript">Store</string>
    <string name="action_import_javascript">Import</string>
    <string name="action_dev_tools">DevTools(beta)</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_useragent">UserAgent(beta)</string>
    <string name="action_donate">Donate</string>
    <string name="action_source_code">Source code | GitHub</string>
    <string name="action_cookie_manager">Cookies</string>
    <string name="action_cookie_new">New cookie</string>
    <string name="action_clear_data">Clear data</string>
    <string name="action_add_search_engine_other">Save</string>
    <string name="action_javascript_store_online">Online</string>
    <string name="action_javascript_store_installed">Installed</string>
    <string name="action_support_project">Support project</string>
    <string name="action_load_html">Load HTML</string>
    <string name="action_load_html_replace">Replace</string>
    <string name="action_load_html_append">Append</string>
    <string name="action_load_html_load">Load</string>
    <string name="action_unlock_hide_functions">Unlock hide functions</string>
    <string name="action_unlock_hide_function_0">Locked</string>
    <string name="action_unlock_hide_function_1">Unlocked</string>
    <string name="action_search">Search</string>
    <string name="action_useragent_new">Add other UserAgent</string>
    <string name="action_request_send">Send</string>
    <string name="action_menu_open">Open</string>
    <string name="action_menu_copy">Copy</string>
    <string name="action_menu_copy_url">Copy URL</string>
    <string name="action_menu_open_in">Open in</string>
    <string name="action_menu_open_in_new_tab">Open in new tab</string>
    <string name="action_menu_remove">Delete</string>
    <string name="action_menu_share">Share</string>
    <string name="action_menu_run">Run</string>
    <string name="action_menu_edit">Edit</string>
    <string name="param_file_size">File size: %1$s</string>
    <string name="param_mime_type_file">MimeType file: %1$s</string>
    <string name="ssl_check_warning_title">Not secure connection</string>
    <string name="ssl_check_ok_title">The connection is secure</string>
    <string name="ssl_check_warning_message">The connection to the site %1$s is not secure. fraudsters can steal bank numbers, etc...</string>
    <string name="ssl_check_ok_message">The connection to the site %1$s is secure, the data you submit is secure...</string>
    <string name="message_console">Use the console to view site errors and execute some commands, to successfully work with the console, you need at least an initial level of knowledge in javascript</string>
    <string name="message_contenteditable">Edit the site content, more precisely its image text without programming knowledge in the web environment</string>
    <string name="message_source_page">View, edit the source code of any page on the site</string>
    <string name="message_highlight_border">Highlighting the borders of all elements on the page, now you can find out which element and where it ends!</string>
    <string name="message_what_app">This application was created for editing site pages on the user side, you can not harm the site itself in any way, this application was created exclusively from the entertainment side. You can change the site or change its operation useing the editing page of the site or using commands through the console</string>
    <string name="message_debug_mode">How to work with Debug mode? First, go to the application settings and enable this function, then restart the application, open a browser on your computer, enter chrome://inspect/#devices or chrome://tracing in the address bar. For this function, you need to enable USB debugging</string>
    <string name="message_storage_problem">If you have problems with tabs or history. Try to solve it like this: Open device SETTINGS->APPS->THIS APP->PERMISSIONS->ON PERMISSION FOR STORAGE. If this permission has already been granted, disable it and enable it again.</string>
    <string name="message_save_session">this function will allow you not to lose the open link, event after closing the application. When you launch the application, the last opening link will open automatically.</string>
    <string name="message_element_editor">Through this function, you can edit the source code of a specific element on the page.</string>
    <string name="message_what_is_it_addons">The add-ons found here are different from the add-ons for other browsers. These add-ons cannot work in the background or load together with the page. These add-ons contain only JavaScript code and nothing more, which can be executed after the page is fully loaded. You can also create your own add-on for this application, below is an example of the main file \"manifest.json\". Create your own add-on: Go to explorer, then find the \"Inspector\" folder, then go to the \"addons\" folder and create your oen folder with any name there, then in the created folder create a \"manifest.json\" file and fill it in according to the example below!</string>
    <string name="message_geolocation">Are you sure you want to share %1$s with your location?</string>
    <string name="message_ssl_error">%1$s Do you want to continue anyway?</string>
    <string name="message_download">Do you really want to download this file \"%1$s\"?\n\nFile name: %2$s\n\nFile size: %3$s</string>
    <string name="message_applied_theme">The theme is applied, wand to restart the application?</string>
    <string name="message_small_problems_storage">Functionality problem?</string>
    <string name="message_not_supported">Not sopported</string>
    <string name="message_clear_history">Are you sure you want to clear all your request history? You can\'t restore it anymore!</string>
    <string name="message_remove">Are you sure you want to delete?</string>
    <string name="message_grant_permissions">For the application to work properly, you need to grant permissions to use the device memory. This will open up the ability to work \"Download code or file\".</string>
    <string name="message_feedback">You can submit your positive or negative feedback here. Also you can suggest new ideas or what you want to see in the new update...</string>
    <string name="message_localhost">Localhost, will allow you to work with full-fledged sites without having access to a network or server/hosting. You can work with both HTML and PHP. There is also support for phpMyAdmin and Apache.</string>
    <string name="message_warning_localhost">When enabled, the device may slow down.</string>
    <string name="message_incomplete_session_found">Incomplete session found. Do you want to continue working?</string>
    <string name="message_remove_all_tabs">Are you sure want to remove all tabs?</string>
    <string name="message_manifest_addons"><![CDATA[<b>ID</b>]]> - id for addons (recomend use number)<![CDATA[<br>]]><![CDATA[<b>NAME</b>]]> - name for add-on<![CDATA[<br>]]><![CDATA[<b>DESCRIPTION</b>]]> - small description for add-on<![CDATA[<br>]]><![CDATA[<b>ICON</b>]]> - use icon from file, example: \"logo.png\" or \"icons/logo.png\"<![CDATA[<br>]]><![CDATA[<b>MAIN_SOURCE</b>]]> - use file js or js code without symbol \"<![CDATA[<br>]]><![CDATA[<b>VERSION</b>]]> - version for add-on<![CDATA[<br>]]><![CDATA[<b>VERSION_CODE</b>]]> - use only number</string>
</resources>