<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alertBackground"
    android:id="@+id/bottomSheetConsole"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/heightBottomPanelWeb"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:orientation="vertical"
    android:elevation="4dp">

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="?attr/dividerVertical"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightBottomPanelWeb">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightBottomPanelWeb"
            android:clickable="false"
            android:text="@string/action_console"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:fontFamily="@font/ds_font_bold"
            android:background="@color/bottomMenu"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="normal"/>

        <LinearLayout
            android:id="@+id/linBottomMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightBottomPanelWeb"
            android:orientation="vertical"
            android:visibility="visible"
            android:background="@color/bottomMenu"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minWidth="300dp"
                    android:gravity="center_vertical|left"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp">

                    <ImageView
                        android:id="@+id/menuBack"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:tint="@color/iconBottomMenu"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_menu_back"
                        tools:ignore="UnusedAttribute" />

                    <ImageView
                        android:id="@+id/menuForward"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:tint="@color/iconBottomMenu"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_menu_forward"
                        tools:ignore="UnusedAttribute" />

                    <ImageView
                        android:id="@+id/menuRefresh"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:tint="@color/iconBottomMenu"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_menu_refresh"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerVertical"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/bottomMenu"
            android:elevation="0dp"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|right">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_baseline_log_24"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginLeft="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:text="0"
                            android:id="@+id/textConsoleLog"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_baseline_error_24"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginLeft="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:text="0"
                            android:id="@+id/textConsoleError"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_baseline_warning_24"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginLeft="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:text="0"
                            android:id="@+id/textConsoleWarning"/>

                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/editMainJSContent"
                    android:hint="@string/hint_write_js"
                    android:maxHeight="100dp"
                    android:minHeight="50dp"
                    android:scrollHorizontally="true"
                    android:scrollbars="horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonMainJSRun"
                        android:text="@string/action_menu_run"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonMainJSClear"
                        android:text="@string/action_clear"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerVertical"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textConsole"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerViewConsole"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>